--- a/css/recorder.css
+++ b/css/recorder.css
@@ -1,15 +1,27 @@
-.tab-pane video {
+/* .tab-pane video {
   width: 100%;
   min-height: 350px;
-  max-height: 350px;
-  height: auto;
   margin-top: 2px;
   border: 1px solid black;
 }
 
 video {
   width: 100%;
+  min-height: auto;
+} */
+/* #videoPlayer-res video{
+  width: 100%;
+  margin-top: 0;
+  min-height: auto;
+} */
+
+video {
+  width: 100%;
+  min-height: 350px;
+  margin-top: 2px;
+  border: 1px solid black;
 }
+
 
 .btnRecord {
   cursor: pointer;
