--- a/css/intro/base-style.css
+++ b/css/intro/base-style.css
@@ -1,10 +1,13 @@
+@import 'https://fonts.googleapis.com/css?family=Raleway:100,600';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300';
+
 html,
 body {
   height: 100%;
   min-height: 100%;
   background: #50badc;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: calc(.2vw + 12px);
   line-height: 1.4;
@@ -38,14 +41,12 @@ h1,
 .h1,
 .nav {
   color: white;
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 2.4rem;
   margin-bottom: 0;
 }
 
 h2, h3, .nav {
-  font-family: 'PT Serif', serif;
   font-weight: 700;
 }
 
